--- a/sistema-exemplo/index.html
+++ b/sistema-exemplo/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Login Catarina</h1>
     <hr>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid assumenda sint pariatur, quod magni doloribus praesentium natus quam numquam, facilis ad a officiis, ducimus minus consectetur fuga. Mollitia, quam vel?</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quos ratione eos nisi explicabo maxime doloribus enim totam deleniti omnis. Officiis magni quasi accusamus dolorum quae eligendi culpa commodi cum!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, animi possimus. Esse quis earum at dicta, est odio quaerat eius blanditiis! Placeat autem quia illo omnis laudantium aliquam nobis provident?</p>
 </body>
 </html>
